Updated apis and added removing current playlist (#18)
